syntax = "proto3";

package spine.web.test.given;

import "spine/options.proto";
import "spine/core/user_id.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.web.test.given";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/timestamp.proto";
import "spine/web/test/given/task.proto";
import "spine/web/test/given/project.proto";

message TaskCreated {

    TaskId id = 1;

    string name = 2 [(required) = true];

    spine.core.UserId assignee = 3;

    string description = 4;

    google.protobuf.Timestamp when = 5 [(required) = true];
}

message TaskRenamed {

    TaskId id = 1;

    string name = 2 [(required) = true];

    google.protobuf.Timestamp when = 3 [(required) = true];
}

message TaskReassigned {

    TaskId id = 1;

    spine.core.UserId from = 2;

    spine.core.UserId to = 3 [(required) = true];

    google.protobuf.Timestamp when = 4 [(required) = true];
}


message ProjectCreated {
    
    ProjectId id = 1;
}
