syntax = "proto3";

package spine.web.test.given;

import "spine/options.proto";
import "spine/core/user_id.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.web.test.given";
option java_outer_classname = "TaskProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/timestamp.proto";

message TaskId {

    string value = 1;
}

message Task {
    option (entity).kind = AGGREGATE;
    option (entity).visibility = FULL;

    TaskId id = 1;

    spine.core.UserId assignee = 2;

    string name = 3;

    string description = 4;

    google.protobuf.Timestamp when_created = 5 [(column) = true];
}
